<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout_settings_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedActivity">

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/settings_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/label_divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="27dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_label"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="113dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/background_settings"
        android:layout_width="345dp"
        android:layout_height="465dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_divider"
        app:layout_constraintVertical_bias="0.114"
        app:shapeAppearanceOverlay="@style/roundedShape"
        app:srcCompat="@color/light_gray" />

    <TextView
        android:id="@+id/about_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:elevation="5dp"
        android:text="@string/about_headline"
        android:contentDescription="@string/about_headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#616161"
        app:layout_constraintEnd_toEndOf="@+id/background_settings"
        app:layout_constraintStart_toStartOf="@+id/background_settings"
        app:layout_constraintTop_toTopOf="@+id/background_settings" />

    <TextView
        android:id="@+id/about_headline2"
        android:layout_width="304dp"
        android:layout_height="534dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="150dp"
        android:elevation="5dp"
        android:text="@string/about_body"
        android:textColor="#616161"
        android:contentDescription="@string/about_body"
        app:layout_constraintEnd_toEndOf="@+id/background_settings"
        app:layout_constraintStart_toStartOf="@+id/background_settings"
        app:layout_constraintTop_toTopOf="@+id/background_settings" />
</androidx.constraintlayout.widget.ConstraintLayout>
